# fastapi-tutorial

./: .editorconfig  .gitignore  README.md  pyproject.toml
fastapi_tutorial/: main.py  simple_api.py  sqlmodel_demo.py  sqlmodel_many_to_many.py
fastapi_tutorial/simple_api/: database.py  main.py  test_main.py
fastapi_tutorial/simple_api/models/: __init__.py  heroes.py  teams.py
