[tool.poetry]
name = "fastapi-tutorial"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
fastapi = "^0.103.2"
sqlmodel = "^0.0.8"


[tool.poetry.group.dev.dependencies]
pytest = "^6.0.0"
httpx = ">=0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
